--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "react-native-screens": "3.31.1",
     "@shopify/flash-list": "1.7.0",
     "zustand": "^4.5.5",
+    "nanoid": "^4.0.0",
+    "lucide-react-native": "^0.3.2",
+    "react-native-svg": "^13.14.0",
+    "react-native-chart-kit": "^6.12.0",
     "zod": "^3.23.8",
     "react-hook-form": "^7.53.0",
     "@hookform/resolvers": "^3.9.0"
