--- a/package.json
+++ b/package.json
@@ -15,41 +15,41 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
-    "@react-native-community/netinfo": "11.3.2",
-    "@tanstack/react-query": "^5.59.0",
-    "expo": "~51.0.32",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
+    "@expo/metro-runtime": "6.1.2",
+    "@react-native-community/netinfo": "11.4.1",
+    "@tanstack/react-query": "^5.90.11",
+    "expo": "~54.0.25",
+    "expo-constants": "~17.0.1",
+    "expo-linking": "~6.5.1",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~0.28.1",
+    "expo-status-bar": "~1.13.1",
     "nativewind": "^4.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-mmkv": "2.12.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-gesture-handler": "~2.18.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "@shopify/flash-list": "1.7.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.0",
+    "react-native-mmkv": "4.0.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "4.18.0",
+    "@shopify/flash-list": "2.2.0",
     "zustand": "^4.5.5",
-    "nanoid": "^4.0.0",
-    "lucide-react-native": "^0.3.2",
-    "react-native-svg": "^13.14.0",
+    "nanoid": "^5.0.1",
+    "lucide-react-native": "^0.555.0",
+    "react-native-svg": "^15.2.0",
     "react-native-chart-kit": "^6.12.0",
     "zod": "^3.23.8",
-    "react-hook-form": "^7.53.0",
-    "@hookform/resolvers": "^3.9.0"
+    "react-hook-form": "^7.67.0",
+    "@hookform/resolvers": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
-    "@types/react": "~18.2.79",
-    "typescript": "~5.3.3",
-    "tailwindcss": "3.4.1",
-    "eslint": "^8.57.0",
-    "eslint-config-universe": "^12.0.1",
+    "@types/react": "^19.0.0",
+    "typescript": "5.9.3",
+    "tailwindcss": "3.4.17",
+    "eslint": "^9.7.0",
+    "eslint-config-universe": "^12.1.0",
     "prettier": "^3.3.3",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
